closed HMS frontend

--- a/Health_Man_Sys_FrontEnd/Pages/About Us.razor
+++ b/Health_Man_Sys_FrontEnd/Pages/About Us.razor
@@ -1,56 +1,66 @@
 ﻿@page "/aboutus"
 
-<div class="Main">
-	
-<div class="content">
-	<h2 style="font-weight:bold; ">About Us</h2>
-	<h4 class="Heading">
-			OUR RESPECTFUL DOCTORS <br />
-			WILL SOLVE YOUR ISSUES
-	</h4>
-		<p class="info">
-			At our healthcare practice, our primary mission is to facilitate<br />
-			seamless connections between patients and experienced medical professionals.<br />
-			We take pride in our specialization in two crucial areas of healthcare:<br />
-			Ophthalmology and Dental care.Our dedicated team of experts in these fields is committed to <br />
-			delivering top-notch, patient-centered care, ensuring that individuals receive<br />
-			the specialized attention they deserve.	Whether you're seeking comprehensive eye exams, <br />
-			advanced vision correction procedures,or superior dental services, we are here to cater to your unique healthcare needs.
-		</p>
-	<h3 style="font-weight:bold">Our Services</h3>
-	<p>We Specialize in the following;</p>
-	<div class="cardscontainer" style="display:flex;">
-			<div class="card" style="width: 18rem; margin: 2px 20px 0 0 ">
-				<img class="card-img-top" src="..." alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div> 
-			<div class="card" style="width: 18rem;">
-				<img class="card-img-top" src="..." alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-	</div>
-</div>
-<div class="image">
-<p>Over the years we have</p>
-		<div class="card" style="width: 24rem;">
-			<div class="card-body" style="display:flex;">
-				<div>
-					<p style="font-weight:bold;">100K </p> <p style="font-weight:bold;">100K </p>
-				</div>
-				<div>
-					<p>Clients</p> <p>Clients</p>
-				</div>
-			
-			</div>
-		</div>
-<img src="/Assets/Eye test.jpg" width="50%"/>
-</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="content">
+            <h2 style="font-weight: bold;">About Us</h2>
+            <h4 class="Heading">
+                OUR RESPECTFUL DOCTORS <br />
+                WILL SOLVE YOUR ISSUES
+            </h4>
+            <p class="info">
+                At our healthcare practice, our primary mission is to facilitate<br />
+                seamless connections between patients and experienced medical professionals.<br />
+                We take pride in our specialization in two crucial areas of healthcare:<br />
+                Ophthalmology and Dental care. Our dedicated team of experts in these fields is committed to <br />
+                delivering top-notch, patient-centered care, ensuring that individuals receive<br />
+                the specialized attention they deserve. Whether you're seeking comprehensive eye exams, <br />
+                advanced vision correction procedures, or superior dental services, we are here to cater to your unique healthcare needs.
+            </p>
+            <h3 style="font-weight: bold;">Our Services</h3>
+            <p>We Specialize in the following:</p>
+            <div class="cardscontainer">
+                <div class="row">
+                <div class="col-md-6">
+                    <div class="card" style="width: 18rem;  ">
+                        <img class="card-img-top" src="/Assets/Infusion Pumps.png" alt="Card image cap" style="width: 36px; margin-left: 100px">
+                        <div class="card-body">
+                            <h5 class="card-title">OPTHALMOLOGY</h5>
+                            <p class="card-text">Our ophthalmology services are designed to prioritize your vision health and well-being.</p>
+                            <a href="Login" class="btn btn-primary">Book Appointment</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                        <div class="card" style="width: 18rem; margin: 2px 20px 0 0;">
+                        <img class="card-img-top" src="/Assets/Dental Filling.png" alt="Card image cap" style="width: 36px; margin-left: 100px">
+                        <div class="card-body">
+                            <h5 class="card-title">DENTAL</h5>
+                            <p class="card-text">Our dental services are tailored to ensure your oral health is in the best hands possible.</p>
+                            <a href="Login" class="btn btn-primary">Book Appointment</a>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="image">
+            <p>Over the years we have had:</p>
+            <div class="card" style="width: 24rem; align-content: center; align-items: center; margin-bottom: 30px; background-color: #E4E6E7;">
+                <div class="card-body" style="display: flex;">
+                    <div>
+                        <p style="font-weight: bolder; font-size: 20px">100K </p>
+                        <p style="font-weight: bolder; margin-right: 15px; font-size: 20px">10,000K </p>
+                    </div>
+                    <div>
+                        <p>Clients</p>
+                        <p>Reviews</p>
+                    </div>
+                </div>
+            </div>
+            <img src="/Assets/Eye test.jpg" width="75%" />
+        </div>
+    </div>
 </div>
