--- a/Health_Man_Sys_FrontEnd/Pages/Index.razor
+++ b/Health_Man_Sys_FrontEnd/Pages/Index.razor
@@ -2,28 +2,30 @@
 
 <PageTitle>Home</PageTitle>
 <div class="Main">
-	<div class="content">
-		<h1 class="Heading">We Care About Your<br /> Well Being</h1>
-		<p class="info">
-			Our dedication revolves around <br />delivering top-notch healthcare
-			and medical<br /> solutions that empower you to lead a more<br /> vibrant
-			and contented life.
-		</p>
-		<p>Login or Sign up to access our services.</p>
-		<button class="btn btn-primary mb-5"style="width:200px">Login<ion-icon name="arrow-forward-outline"></ion-icon></button>
-		<div class="handles">
-			<a><ion-icon name="logo-instagram"></ion-icon></a>
-			<a><ion-icon name="logo-linkedin"></ion-icon></a>
-			<a><ion-icon name="mail-outline"></ion-icon></a>
-		</div> 
-		<p>Get InTouch</p>
-	</div>
-	<div class="image">
-		<img src="/Assets/Daktari.jpg" />
-	</div>
-	
+    <div class="row">
+        <div class="col-md-6">
+            <div class="content">
+                <h1 class="Heading">We Care About Your<br /> Well Being</h1>
+                <p class="info">
+                    Our dedication revolves around <br />delivering top-notch healthcare
+                    and medical<br /> solutions that empower you to lead a more<br /> vibrant
+                    and contented life.
+                </p>
+                <p>Login or Sign up to access our services.</p>
+                <button class="btn btn-primary mb-5" style="width:200px; background-color:#395D6B;" onclick="location.href = '/Login';">Login<ion-icon name="arrow-forward-outline"></ion-icon></button>
+                <div class="handles">
+                    <a><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a><ion-icon name="mail-outline"></ion-icon></a>
+                </div>
+                <p>Get InTouch</p>
+            </div>
+        </div>
 
+        <div class="col-md-6">
+            <div class="image">
+                <img src="/Assets/Daktari.jpg" class="img-fluid" alt="Image" />
+            </div>
+        </div>
+    </div>
 </div>
-
- 
-
