--- a/Health_Man_Sys_FrontEnd/Pages/About Us.razor.css
+++ b/Health_Man_Sys_FrontEnd/Pages/About Us.razor.css
@@ -1,16 +1,16 @@
 ﻿.Main{
-	position: relative;
-	display: flex;
+	/*position: relative;
+	display: flex;*/
 	/*flex-wrap: wrap;*/
-	flex-direction: row;
-	margin:0px 5px 0 20px;
+	/*flex-direction: row;*/
+	/*margin:0px 5px 0 20px;*/
 	align-content: center;
 	align-items: center;
 }
 .content {
-	display: flex;
+	/*display: flex;
 	flex-wrap: wrap;
-	flex-direction: column;
+	flex-direction: column;*/
 	margin:0px 10px 30px 0;
 }
 .image{
