--- a/Health_Man_Sys_FrontEnd/Pages/Login.razor
+++ b/Health_Man_Sys_FrontEnd/Pages/Login.razor
@@ -1,51 +1,62 @@
 ﻿@page "/Login"
 @using System.ComponentModel.DataAnnotations
+@using Health_Man_Sys_FrontEnd.Models;
 @using Microsoft.AspNetCore.Components.Authorization
-@inject AuthenticationStateProvider AuthenticationStateProvider
+@*@inject AuthenticationStateProvider AuthenticationStateProvider*@
 
-<h1>Login</h1>
+@*<h3>Login</h3>*@
 
-<EditForm @*Model="@loginModel" OnValidSubmit="HandleValidSubmit" *@>
-    <DataAnnotationsValidator />
-    <ValidationSummary />
-
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <InputText id="username" class="form-control" @* @bind-Value="@loginModel.Username"*@ />
+@if (loginError)
+{
+    <p class="text-danger">Invalid username or password.</p>
+}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h3>Login</h3>
+            <EditForm Model="@loginModel" OnSubmit="HandleLogin">
+                <DataAnnotationsValidator />
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <InputText id="username" class="form-control" @bind-Value="@loginModel.Username" aria-describedby="username" />
+                    <ValidationMessage For="() => loginModel.Username" />
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <InputText type="Password" class="form-control" id="password" @bind-Value="@loginModel.Password" aria-describedby="password" />
+                    <ValidationMessage For="() => loginModel.Password" />
+                </div>
+                <div class="form-group">
+                    <NavLink class="nav-link" href="register">
+                        If you don't have an account, click here to create one
+                    </NavLink>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </div>
+            </EditForm>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <InputText id="password" type="password" class="form-control" @*@bind-Value="@loginModel.Password"*@ />
-    </div>
-
-    <button type="submit" class="btn btn-primary">Login</button>
-</EditForm>
+</div>
 
 @code {
-    private LoginModel loginModel = new LoginModel();
+    private LoginDTO loginModel = new LoginDTO();
+    private bool loginError = false;
 
-    private async Task HandleValidSubmit()
+    private async Task HandleLogin()
     {
-        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-        var user = authState.User;
 
-        if (user.Identity != null && user.Identity.IsAuthenticated)
+        if (loginModel.Username == "demo" && loginModel.Password == "password")
         {
-            // User is already authenticated, no need to do anything.
-            return;
+            loginError = false;
+            Console.WriteLine("Login successful!");
         }
-        
-        // TODO: Authenticate the user.
+        else
+        {
+
+            loginError = true;
+        }
     }
 
-    private class LoginModel
 
-    {
-        [Required]
-        public string Username { get; set; }
-
-        [Required]
-        public string Password { get; set; }
-    }
 }
