--- a/Health_Man_Sys_FrontEnd/Pages/Registration.razor.css
+++ b/Health_Man_Sys_FrontEnd/Pages/Registration.razor.css
@@ -1,10 +1,9 @@
-﻿.login {
-    display: flex;
+﻿.form-container{
+	display: flex;
+    flex-direction: column;
     align-content: center;
     justify-content: center;
     margin-left:500px;
     align-items: center;
     height: 100vh;
-    
-   
 }
