--- a/Health_Man_Sys_FrontEnd/Shared/NavMenu.razor
+++ b/Health_Man_Sys_FrontEnd/Shared/NavMenu.razor
@@ -9,25 +9,120 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="aboutus">
-                <span class="oi oi-plus" aria-hidden="true"></span> About Us
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="contactus">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Contact Us
-            </NavLink>
-        </div>
+        @if(Role == "")
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="aboutus">
+                    <span class="oi oi-plus" aria-hidden="true"></span> About Us
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Login">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Login
+                </NavLink>
+            </div>
+        }
+       
+        @if (Role == "Admin")
+        {
+            <!-- Admin menu items -->
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="doctors-table" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Doctors
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="hospital-table">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Hospitals
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="patientrecords">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Patients
+                </NavLink>
+            </div>
+             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="applications">
+                  <span style="margin-right:2px;"><ion-icon name="receipt" style="font-size:24px;"></ion-icon></span>  
+                    @*<span class="oi oi-list-rich" aria-hidden="true"></span> *@Applications
+                </NavLink>
+            </div>
+            <div class="nav-item px-3 mt-3">
+                <button class="btn btn-danger">LogOut</button>
+            </div>
+        }
+
+        @if (Role == "Patient")
+        {
+            <!-- Patient menu items -->
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="appointment" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Appointment
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="bookings">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Bookings
+                </NavLink>
+            </div>
+              <div class="nav-item px-3">
+                <NavLink class="nav-link" href="invoice">
+                  <span style="margin-right:2px;"><ion-icon name="receipt" style="font-size:24px;"></ion-icon></span>  
+                   Invoice
+                </NavLink>
+              </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="history">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> History
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <button class="btn btn-danger">LogOut</button>
+            </div>
+            
+        }
+
+        @if (Role == "Doctor")
+        {
+            <!-- Doctor menu items -->
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="doctorsbooking" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span>Bookings
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="patientrecords">
+                    <span class="oi oi-plus" aria-hidden="true"></span> PatientRecords
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="AIchat">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> AI Assistant
+                </NavLink>
+            </div>
+          
+            <div class="nav-item px-3 mt-3">
+                <button class="btn btn-danger">LogOut</button>
+            </div>
+        }
+
+        
+  
     </nav>
 </div>
 
+
 @code {
+
+    private string Role = "Patient"; 
+    private UserDTO userDTO = new UserDTO();
+
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -36,4 +131,6 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+    
 }
