--- a/Health_Man_Sys_FrontEnd/_Imports.razor
+++ b/Health_Man_Sys_FrontEnd/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using Health_Man_Sys_FrontEnd
 @using Health_Man_Sys_FrontEnd.Shared
+
+@using Health_Man_Sys_FrontEnd.Models.User
+
+@*@using Blazorise
+@using Blazorise.Bootstrap
+@using Blazorise.Charts*@
